--- a/index.html
+++ b/index.html
@@ -81,5 +81,32 @@
         </section>
     </main>
     <script src="js/script.js"></script>
+           <!-- ini adalah tabel dari hasil kalkulatornya -->
+   <section class="table-result">
+<article>
+<p>0-18.5=Kurus</p>
+<p>18.5-24.9=Normal</p>
+<p>24.9-29.9=Kelebihan Berat Badan</p>
+<p>30+=Obesitas</p>
+</article>
+   </section> 
+
+
+
+
+
+
+
+
+
+
+    <!-- ini footer -->
+    <footer id="main-footer">
+         <p>Website Made By: Reza</p>
+        <p>Copyright &copy;2024</p>
+  
+    </footer>
+  </body>
 </body>
+
 </html>
